wip: add stratisd for experimentation

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -135,6 +135,7 @@ packages:
   - lvm2 iscsi-initiator-utils sg3_utils
   - device-mapper-multipath
   - xfsprogs e2fsprogs btrfs-progs mdadm
+  - stratisd
   - cryptsetup
   - cifs-utils
   - WALinuxAgent-udev
